--- a/munkey/tsconfig.json
+++ b/munkey/tsconfig.json
@@ -1,8 +1,16 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ESNext",
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "target": "ES6",
         "composite": true,
-        "sourceMap": false
+        "sourceMap": true,
+        "types": [
+            "node"
+        ],
+        "lib": [
+            "es2015"
+        ]
     }
 }
