Express endpoint for peer exchange
- Accepts and responds with a `PeerIdentityDecl` JSON object
  - Contains basic identifying information, will include certs later
- Added new `IdentityService` to dependency injection

--- a/munkey/tsconfig.json
+++ b/munkey/tsconfig.json
@@ -17,6 +17,7 @@
     "include": [
         "munkey.ts",
         "command.ts",
-        "services.ts"
+        "services.ts",
+        "discovery.ts"
     ]
 }
