Bug fixes in `CommandServer`, `vault list` command
- Added new `onListVaults()` method to `CommandServer` class
- Replaced `.hasOwnProperty()` calls in validation function with `in`
- Replaced `GET /` with `POST /link` to allow submitting JSON
- Added missing `response.end()` call to `/link` endpoint

--- a/munkey/tsconfig.json
+++ b/munkey/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "moduleResolution": "node",
-        "target": "ES6",
+        "target": "ESNext",
         "composite": true,
         "sourceMap": true,
         "types": [
