--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
     "build": "tsc --build munkey",
     "start": "npm run build && node munkey/bin/munkey.js",
     "clean": "rm -rf bin node_modules",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --config ./.mocharc.json test/**/*.test.ts"
   },
   "keywords": [],
   "author": "Joshua Cooper",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.0.0",
     "@types/pouchdb-core": "^7.0.8",
     "@types/pouchdb-node": "^6.1.4",
+    "@types/sinon": "^10.0.6",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "sinon": "^12.0.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
