--- a/munkey/tsconfig.json
+++ b/munkey/tsconfig.json
@@ -10,7 +10,8 @@
             "node"
         ],
         "lib": [
-            "es2015"
+            "es2015",
+            "dom"
         ],
         "outDir": "bin"
     },
