--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "devDependencies": {
     "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
+    "@types/memdown": "^3.0.0",
     "@types/mocha": "^9.0.0",
-    "@types/pouchdb-core": "^7.0.8",
-    "@types/pouchdb-node": "^6.1.4",
+    "@types/node": "^15.14.9",
+    "@types/pouchdb": "^6.4.0",
     "@types/sinon": "^10.0.6",
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
