--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/node": "^15.14.9",
     "@types/pouchdb": "^6.4.0",
     "@types/sinon": "^10.0.6",
+    "@types/supertest": "^2.0.11",
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
     "sinon": "^12.0.1",
+    "supertest": "^6.1.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
