--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Joshua Cooper",
   "license": "MIT",
   "devDependencies": {
+    "@types/argparse": "^2.0.10",
+    "@types/winston": "^2.4.4",
     "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
     "@types/memdown": "^3.0.0",
@@ -29,7 +31,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@types/winston": "^2.4.4",
+    "argparse": "^2.0.1",
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
     "memdown": "^6.1.1",
