--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/argparse": "^2.0.10",
-    "@types/winston": "^2.4.4",
+    "@types/bonjour": "^3.5.9",
     "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
     "@types/memdown": "^3.0.0",
@@ -23,6 +23,7 @@
     "@types/pouchdb": "^6.4.0",
     "@types/sinon": "^10.0.6",
     "@types/supertest": "^2.0.11",
+    "@types/winston": "^2.4.4",
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
     "sinon": "^12.0.1",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "argparse": "^2.0.1",
+    "bonjour": "^3.5.0",
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
     "memdown": "^6.1.1",
