--- a/munkey/tsconfig.json
+++ b/munkey/tsconfig.json
@@ -18,7 +18,10 @@
     "include": [
         "munkey.ts",
         "command.ts",
-        "services.ts",
-        "discovery.ts"
+        "discovery.ts",
+        "logging.ts",
+        "configure.ts",
+        "services/**/*.ts",
+        "pouch/**/*.ts"
     ]
 }
