--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/argparse": "^2.0.10",
     "@types/bonjour": "^3.5.9",
     "@types/chai": "^4.2.22",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/express": "^4.17.13",
     "@types/memdown": "^3.0.0",
     "@types/mocha": "^9.0.0",
@@ -25,6 +26,7 @@
     "@types/supertest": "^2.0.11",
     "@types/winston": "^2.4.4",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^9.1.3",
     "sinon": "^12.0.1",
     "supertest": "^6.1.6",
