--- a/munkey/tsconfig.json
+++ b/munkey/tsconfig.json
@@ -21,6 +21,7 @@
         "discovery.ts",
         "logging.ts",
         "configure.ts",
+        "error.ts",
         "services/**/*.ts",
         "pouch/**/*.ts",
         "server/**/*.ts"
