Add encryption methods to shell

--- a/munkey/tsconfig.json
+++ b/munkey/tsconfig.json
@@ -24,6 +24,7 @@
         "error.ts",
         "services/**/*.ts",
         "pouch/**/*.ts",
-        "server/**/*.ts"
+        "server/**/*.ts",
+        "encryption/**/*.ts"
     ]
 }
