--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mocha": "^9.0.0",
     "@types/node": "^15.14.9",
     "@types/pouchdb": "^6.4.0",
+    "@types/pouchdb-core": "^7.0.10",
     "@types/sinon": "^10.0.6",
     "@types/supertest": "^2.0.11",
     "@types/winston": "^2.4.4",
@@ -34,11 +35,14 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.5.0",
+    "@grpc/proto-loader": "^0.6.9",
     "argparse": "^2.0.1",
     "bonjour": "^3.5.0",
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
     "memdown": "^6.1.1",
+    "munkey-rpc": "file:lib/munkey-rpc",
     "pouchdb": "^7.2.2",
     "winston": "^3.3.3"
   }
