--- a/lib/munkey-rpc/package.json
+++ b/lib/munkey-rpc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "munkey-rpc",
+  "name": "@munkey/munkey-rpc",
   "version": "0.0.1",
   "description": "Language-agnostic RPC protocol interface library",
   "main": "index.js",
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "python build.py",
     "clean": "rm -rf node_modules",
-    "clean:all": "rm -rf bin node_modules"
+    "clean:all": "rm -rf bin node_modules",
+    "prepack": "npm run install && npm run build && npm run clean"
   },
   "author": "Josh C",
   "license": "MIT",
