--- a/munkey/package.json
+++ b/munkey/package.json
@@ -36,12 +36,12 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.5.0",
+    "@munkey/munkey-rpc": "file:../lib/munkey-rpc/munkey-munkey-rpc-0.0.1.tgz",
     "argparse": "^2.0.1",
     "bonjour": "^3.5.0",
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
     "memdown": "^6.1.1",
-    "munkey-rpc": "file:../lib/munkey-rpc",
     "pouchdb": "^7.2.2",
     "winston": "^3.3.3"
   }
