--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
+name: Node.js Tests
 
 # Controls when the workflow will run
 on:
@@ -15,9 +13,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  run-tests:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -25,12 +21,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # Sets up local dependencies
+      - name: Setup for dependency `munkey-rpc`
+        working-directory: ./lib/munkey-rpc
+        run: npm pack
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Run tests for main package
+      - name: Run tests for `munkey` service
+        working-directory: ./munkey
         run: |
           npm install
           npm run test
