Fix typo in `package.json` script for `munkey-rpc`

--- a/lib/munkey-rpc/package.json
+++ b/lib/munkey-rpc/package.json
@@ -8,7 +8,7 @@
     "build": "python build.py",
     "clean": "rm -rf node_modules",
     "clean:all": "rm -rf bin node_modules",
-    "prepack": "npm run install && npm run build && npm run clean"
+    "prepack": "npm install && npm run build && npm run clean"
   },
   "author": "Josh C",
   "license": "MIT",
