--- a/munkey/package.json
+++ b/munkey/package.json
@@ -7,7 +7,9 @@
     "build": "tsc",
     "start": "npm run build && node munkey/bin/munkey.js",
     "clean": "rm -rf bin node_modules",
-    "test": "mocha --config ./.mocharc.json test/**/*.test.ts"
+    "test": "mocha --config ./.mocharc.json --extension .test.ts --recursive test/",
+    "test:unit": "mocha --config ./.mocharc.json --extension .test.ts --recursive test/unit/",
+    "test:integration": "mocha --config ./.mocharc.json --extension .test.ts --recursive test/integration/"
   },
   "keywords": [],
   "author": "Joshua Cooper",
