--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,14 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Setup .NET 6
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
+    - name: Build & setup CLI app/tests
+      run: |
+        dotnet restore
+        dotnet build -c Release --no-restore
     - name: Run .NET command-line app tests
       run: |
-        dotnet test .\munkey-app\MunkeyCliTest\
+        dotnet test -c Release --no-build
