--- a/munkey/package.json
+++ b/munkey/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.5.0",
+    "@munkey/munkey-rpc": "file:../lib/munkey-rpc/munkey-munkey-rpc-0.0.1.tgz",
     "argparse": "^2.0.1",
     "bonjour": "^3.5.0",
     "express": "^4.17.1",
