Split `Contexts` classes into separate lib project

--- a/munkey-app/MunkeyCliTest/MunkeyCliTest.csproj
+++ b/munkey-app/MunkeyCliTest/MunkeyCliTest.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\cli\MunkeyCli.csproj" />
+    <ProjectReference Include="..\MunkeyClient\MunkeyClient.csproj" />
   </ItemGroup>
 
 </Project>
