Implement view for entry form
Still missing upload functionality

--- a/munkey-app/MunkeyApp/MunkeyApp.csproj
+++ b/munkey-app/MunkeyApp/MunkeyApp.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="VaultPage.xaml" />
+    <None Remove="View\PasswordEntryForm.xaml" />
     <None Remove="View\VaultCreationForm.xaml" />
     <None Remove="View\VaultLinkForm.xaml" />
   </ItemGroup>
@@ -31,6 +32,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MunkeyClient\MunkeyClient.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="View\PasswordEntryForm.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="View\VaultLinkForm.xaml">
