--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,4 +59,6 @@ jobs:
       #  dotnet build -c Release --no-restore
     - name: Run .NET command-line app tests
       run: |
-        dotnet test -c Release --no-build
+        dotnet test -c Release --no-build munkey-app/MunkeyCliTest
+      # Same as above; this will not work until 6.0.300+ is released
+      # dotnet test -c Release --no-build
