--- a/munkey/package.json
+++ b/munkey/package.json
@@ -26,6 +26,7 @@
     "@types/memdown": "^3.0.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^15.14.9",
+    "@types/node-forge": "^1.0.1",
     "@types/pouchdb": "^6.4.0",
     "@types/pouchdb-core": "^7.0.10",
     "@types/sinon": "^10.0.6",
@@ -47,6 +48,7 @@
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
     "memdown": "^6.1.1",
+    "node-forge": "^1.3.1",
     "pouchdb": "^7.2.2",
     "winston": "^3.3.3"
   }
